Initial 21.1 port TODO: Re-implement terminal entry tooltip